# ai-trendings

./: .env.example  .gitignore  CHANGES.md.local  FREE_APIS.md  PROJECT_2026-02-01_SUMMARY.md  README.md  VERCEL_GUIDE.md  generate_project.py  generate_project.py.local  generate_readmes.py  index.html  projects.json  topics-used.txt  vercel.json
api/: 2026-02-01-ai-mood-analyzer.py  2026-02-02-ai-dream-interpreter.py  2026-02-03-ai-haiku-creator.py  2026-02-04-ai-riddle-generator.py  2026-02-05-ai-fortune-teller.py  2026-02-06-ai-quote-generator.py  2026-02-07-ai-affirmation-generator.py  2026-02-08-ai-color-palette-generator.py  2026-02-09-ai-name-generator.py  2026-02-10-ai-tagline-creator.py  2026-02-11-ai-compliment-generator.py  2026-02-12-ai-excuse-generator.py  2026-02-13-ai-playful-insult-generator.py  2026-02-14-ai-love-message-generator.py  2026-02-15-ai-story-starter.py  2026-02-16-ai-plot-generator.py  2026-02-20-ai-cosmic-whisperer.py  2026-02-21-ai-dungeon-master.py  2026-02-23-ai-character-generator.py  dungeon-choice.py  index.py  pyproject.toml  requirements.txt  story-enhance.py  story-illustrate.py  story.py  test.py
api/2026-02-21-ai-dungeon-master/: choice.py  start.py
api/2026-02-22-ai-story-illustrator/: enhance.py  illustrate.py  pyproject.toml
api/2026-02-23-ai-character-generator/: pyproject.toml  start.py
api/dungeon-master/: start.py
api/lib/: __init__.py  base.py
api/lib/projects/: _2026_02_01.py  _2026_02_02.py  _2026_02_03.py  _2026_02_04.py  _2026_02_05.py  __init__.py  day_2026_02_01.py  day_2026_02_02.py  day_2026_02_03.py  (+12 more)
(+338 files in other folders)
