[project]
name = "ai-trendings-api"
version = "0.1.0"
description = "AI Trendings serverless functions"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "2026-02-21-ai-dungeon-master",
    "2026-02-22-ai-story-illustrator",
    "2026-02-23-ai-character-generator"
]

[tool.hatch.build]
include = ["**/*.py"]
