[project]
name = "ai-trendings-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lib", "lib.projects", "lib.data"]

[tool.setuptools.package-data]
"lib.data" = ["*.json", "*.db"]
